Custom scrollbar; prevent text selection

--- a/src/renderer/assets/styles.scss
+++ b/src/renderer/assets/styles.scss
@@ -1,41 +1,94 @@
 $sidebar-width: 200px;
 
+@import url('https://fonts.googleapis.com/css?family=Muli:400,700,900');
+
 * {
-    cursor: default;
+  cursor: default;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
 }
 
-a, button {
-    cursor: pointer;
+a,
+button {
+  cursor: pointer;
 }
 
 body {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  font-family: 'Muli', sans-serif;
 }
 
 #sidebar {
-    position: fixed;
-    height: 100%;
-    width: $sidebar-width;
-    background-color: #222222;
-    color: #bbbbbb;
-    overflow-x: hidden;
-    top: 0;
-    left: 0;
-    padding-top: 1rem;
-    z-index: 666;
+  position: fixed;
+  height: 100%;
+  width: $sidebar-width;
+  background-color: #222222;
+  color: #bbbbbb;
+  overflow-x: hidden;
+  top: 0;
+  left: 0;
+  padding-top: 1rem;
+  z-index: 666;
 }
 
 #main {
-    margin-left: $sidebar-width;
-    padding: 1rem;
+  margin-left: $sidebar-width;
+  padding: 1rem;
 }
 
+
+// -----------------------------------------------------------------------------
+/*#region Feed Cards */
+
 .feed-card {
-    margin-bottom: 1rem;
+  margin-bottom: 1rem;
+
+  .el-card__header {
+    background-color: #343434;
+    color: #dddddd;
+    font-weight: bold;
+  }
 }
 
 .feed-body {
-    height: 400px;
-    overflow-y: auto;
+  height: 400px;
+  padding-right: 5px;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
+
+/*#endregion */
+
+
+// -----------------------------------------------------------------------------
+/*#region Custom Scrollbar */
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+// Track
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 2px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  -webkit-border-radius: 2px;
+}
+
+// Handle
+::-webkit-scrollbar-thumb {
+  background: rgba(50,50,50,0.8); 
+  border-radius: 2px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  -webkit-border-radius: 2px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgba(50,50,50,0.4);
+}
+
+/*#endregion */
